# bug_trail

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Makefile  Makefile.old  README.md  basic_help.sh  basic_test.sh  bug_trail.flat.md  example.py  example_code_as_config.py  example_multithread.py  example_with_fish_tank.py  fish_tank.tags  pyproject.toml  pyproject.toml.org  zensical.toml
.github/workflows/: build.yml  docs.yml
bug_trail/: __about__.py  __init__.py  __main__.py  data_code.py  exceptions.py  fs_utils.py  handlers.py  incremental.py  log_detail.html  log_overview.html  pygments_job.py  view_base.jinja  view_detail.jinja  view_detail.py  view_main.jinja  view_main.py  view_navbar.jinja  view_python_environment.jinja  view_python_environment.py  view_shared.py  view_system_info.py  views.py
bug_trail_core/: __init__.py  config.py  handlers.py  sqlite3_utils.py
docs/: TODO.md  features.md  index.md  installation.md  usage.md
docs/bug_trail/: config.html  data_code.html  exceptions.html  fs_utils.html  handlers.html  incremental.html  index.html  pygments_job.html  sqlite3_utils.html  view_detail.html  view_main.html  view_python_environment.html  view_shared.html  view_system_info.html  views.html
docs/bug_trail_core/: config.html  handlers.html  index.html  sqlite3_utils.html
docs_api/bug_trail/: data_code.html  exceptions.html  fs_utils.html  incremental.html  index.html  pygments_job.html  view_detail.html  view_main.html  view_python_environment.html  view_shared.html  view_system_info.html  views.html
docs_api/bug_trail_core/: config.html  exceptions.html  generate_sql.html  handlers.html  index.html  report_meta.html  sqlite3_utils.html  system_info.html  venv_info.html
fish_tank/: __init__.py  __main__.py  basic_classes.py  best_fish.py
scripts/: make_prompt.sh  make_source.sh
spec/: GEMINI_SAYS.md  MODERNIZATION.md  NEXT_STEPS.md  SONNET_SAYS.md
tests/: test_data_code.py  test_handlers.py  test_main.py  test_pico.py  test_views.py
tests_performance/: pyproject.toml  stdlib_logging.py  with_picologging.py
