[project]
name = "bug-trail-workspace"
version = "0.0.0"
description = "Monorepo workspace for bug-trail"
dependencies = [
    "bug-trail",
    "bug-trail-core",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
bug-trail = { workspace = true }
bug-trail-core = { workspace = true }

[dependency-groups]
dev = [
    "metametameta>=0.1.2",
    "hatchling",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pylint>=3.0.2",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "types-toml",
    "types-psutil",
    "types-Pygments",
    "pre-commit>=3.5.0",
    "scriv>=1.5.0",
    "interrogate>=1.5.0",
    "pdoc3>=0.10.0",
    "zensical>=0.0.29",
]

[tool.ruff]
line-length = 320
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "D", "UP", "B"]
ignore = [
    "E722",
    "D200", "D212", "D415", "D411", "D205", "D102", "D103", "D100", "D107", "D101", "D104", "D105",
    "UP007", "UP038",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["packages"]

[tool.bug_trail]
app_name = "myapp"
app_author = "myname"
source_folder = "fish_tank"
ctags_file = "fish_tank.tags"
